Gray-Space/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>main</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Marketing Materials</fullName>
        </values>
        <values>
            <fullName>Meeting</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Not_Converted_Reason__c</fullName>
        <label>Not Converted Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GS_Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GS_Space_Type_PickList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>B2B_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>B2B</label>
        <queue>B2B</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B2C_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>B2C</label>
        <queue>B2C</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <recordTypes>
        <fullName>main</fullName>
        <active>true</active>
        <businessProcess>main</businessProcess>
        <label>main</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Marketing_Materials_without_email</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(Status , &quot;GS_Marketing_Materials&quot;) || ISPICKVAL(Status , &quot;GS_Meeting&quot;) || ISPICKVAL(Status , &quot;GS_Closed_Converted&quot;), 
    ISBLANK( Email )  ||  ISBLANK( Phone ), 
    false
)</errorConditionFormula>
        <errorMessage>Lead Phone And Email can not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Converted_has_to_have_reason</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(Status , &quot;GS_Closed_Not_Converted&quot;), 
    ISBLANK( GS_Not_Converted_Reason__c ), 
    false
)</errorConditionFormula>
        <errorDisplayField>GS_Not_Converted_Reason__c</errorDisplayField>
        <errorMessage>You Have to specify why lead is not converted</errorMessage>
    </validationRules>
</CustomObject>